# o3de-atom-sampleviewer

./: .gitignore  .lfsconfig  AssetProcessorGamePlatformConfig.ini  AssetProcessorGamePlatformConfig.setreg  CMakeLists.txt  Config.xml  EngineFinder.cmake  README.md  atomsampleviewer_asset_files.cmake  game.cfg  gems.json  generate_asset_cmake.bat  project.json
Config/: Editor.xml  Game.xml  Game_RHI_Samples_Template.xml  ImageComparisonConfig.azasset  shader_global_build_options.json
Gem/: gem.json
Materials/: BasePBR.material  DefaultPBR.material  DefaultPBRTransparent.material  TransparentDoubleSide.material
Objects/: Left_Hand_Controller.fbx  Right_Hand_Controller.fbx  com_envi_me_wall-2x2_testcorner.fbx  com_envi_me_wall-2x2_testcorner_readme.txt  eye.fbx  sphere_5lods.fbx.assetinfo  suzanne.fbx
Passes/: CheckerboardPipeline.pass  ColorInvertCS.pass  ColorblindnessSimulation.pass  ComplexPipeline.pass  Fullscreen.pass  FullscreenPipeline.pass  ImGuiNoInput.pass  ImGuiOnlyPipeline.pass  LuxCoreTexture.pass  MSAA_2x_RPI_Pipeline.pass  MSAA_4x_RPI_Pipeline.pass  MSAA_8x_RPI_Pipeline.pass  MSAA_RPI_Pipeline_Core.pass  MainPipeline.pass  MainPipeline_Mobile.pass  MainRenderPipeline.azasset  Monochrome.pass  MultiGPUCompositePass.pass  MultiGPUCopyBufferToBuffer.pass  MultiGPUCopyBufferToImage.pass  MultiGPUCopyImageToBuffer.pass  MultiGPUCopyTestPipeline.pass  MultiGPUPipeline.pass  MultiGPUTrianglePass.pass  No_MSAA_RPI_Pipeline.pass  PassTemplates.azasset  RHISamplePass.pass  RHISamplePipeline.pass  RHISamplePipelineXRLeft.pass  RHISamplePipelineXRRight.pass  RayTracingAmbientOcclusion.pass  ReadbackFiller.pass  ReadbackPipeline.pass  ReadbackPreview.pass  RenderTexture.pass  SelectorPass.pass  SsaoPipeline.pass  VertexAnimation.pass
Registry/: assetprocessor_settings.setreg  assets_scan_folders.setreg  material_pipelines.setreg  openxr.setreg
Scripts/: AreaLightTest.bv.lua  AuxGeom.bv.lua  CheckerboardTest.bv.lua  CullingAndLod.bv.lua  CullingandAndLodPerf.bv.lua  Decals.bv.lua  DepthOfFieldTest.bv.lua  DiffuseGITest.bv.lua  DynamicDraw.bv.lua  DynamicMaterialTest.bv.lua  ExposureTest.bv.lua  EyeMaterialTest.bv.lua  LightCulling.bv.lua  MSAA_RPI_Test.bv.lua  MaterialHotReloadTest.bv.lua  MaterialScreenshotTests.bv.lua  MultiRenderPipeline.bv.lua  MultiScene.bv.lua  ParallaxDepthArtifacts.bv.lua  ParallaxTest.bv.lua  PassTree.bv.lua  ReadbackTest.bv.lua  RenderTargetTexture.bv.lua  SceneReloadSoakTest.bv.lua  ShaderReloadSoakTest.bv.lua  ShadowTest.bv.lua  ShadowedBistroTest.bv.lua  ShadowedSponzaTest.bv.lua  SkinnedMesh.bv.lua  SkinnedMotionVector.bv.lua  StreamingImageTest.bv.lua  TestEnvironment.lua  TransparentTest.bv.lua  _AutomatedPeriodicBenchmarkSuite_.bv.lua  (+7 more)
Standalone/: CMakeLists.txt  atomsample_viewer_files.cmake  atomsample_viewer_ios_files.cmake  atomsample_viewer_mac_files.cmake  native_activity_glue_files.cmake  runtime_dependencies.cmake
Standalone/Platform/Android/: atomsampleviewer_traits_android.cmake  main_android.cpp  platform_android_files.cmake
Standalone/Platform/Common/: AtomSampleViewerApplication.cpp  AtomSampleViewerApplication.h  AtomSampleViewerApplication_common.cpp
Standalone/Platform/Linux/: AtomSampleViewerApplication_linux.cpp  atomsampleviewer_traits_linux.cmake  main_linux.cpp  platform_linux_files.cmake
Standalone/Platform/Mac/: AtomSampleViewerApplication_mac.cpp  MacLumberyardApplication.h  MacLumberyardApplication.mm  MacLumberyardApplicationDelegate.mm  MacO3DEApplication.h  MacO3DEApplication.mm  MacO3DEApplicationDelegate.mm  atomsampleviewer_traits_mac.cmake  main_mac.mm  platform_mac_files.cmake
Standalone/Platform/Windows/: AtomSampleViewerApplication_windows.cpp  atomsampleviewer_traits_windows.cmake  main_windows.cpp  platform_windows_files.cmake
Standalone/Platform/iOS/: AtomSampleViewerApplication_ios.cpp  IosLumberyardApplication.mm  IosLumberyardApplicationDelegate.mm  IosO3DEApplication.mm  IosO3DEApplicationDelegate.mm  atomsampleviewer_traits_ios.cmake  main_ios.mm  platform_ios_files.cmake
Standalone/PythonTests/: CMakeLists.txt  conftest.py
Standalone/PythonTests/Automated/: benchmark_data_aggregator.py  benchmark_runner_periodic_suite.py  test_AtomSampleViewer_dx12.py  test_AtomSampleViewer_main_suite.py  test_AtomSampleViewer_periodic_suite.py  test_AtomSampleViewer_vulkan.py  test_AtomSampleViewer_warp_suite.py
Standalone/PythonTests/Automated/test_suites/main/: test_AtomSampleViewer_main_dx12.py  test_AtomSampleViewer_main_vulkan.py
Standalone/PythonTests/Automated/test_suites/periodic/: test_AtomSampleViewer_main_vulkan.py  test_AtomSampleViewer_periodic_dx12.py  test_AtomSampleViewer_periodic_vulkan.py
Standalone/PythonTests/Automated/test_suites/smoke/: test_AtomSampleViewer_smoke_dx12.py
Standalone/Resources/AppleTVLauncher/: Info.plist
Standalone/Resources/IOSLauncher/: Info.plist
Standalone/Resources/MacLauncher/: Info.plist
(+990 files in other folders)
